# Python_basics

./: .gitignore  README.md
Excel/: .gitignore  excelstart.py  main.py  pandas_example.py
Miles_KM_Converter/: main.py
Solution - pomodoro-end/: main.py  main.pyw  main_orig.py  pomodoro.py
Solution - pomodoro-end/icon/: README.md
Solution - pomodoro-end/run/: run.bat
djangotutorial/: README.md  requirements.txt
djangotutorial/mysite/: settings.py  urls.py
djangotutorial/polls/: models.py  tests.py  urls.py  views.py
djangotutorial/polls/migrations/: 0001_initial.py
djangotutorial/polls/static/polls/: style.css
djangotutorial/polls/templates/polls/: detail.html  index.html  results.html
packaging_tutorial/: pyproject.toml
packaging_tutorial/src/example_package_pdob/child/: child_file.py
packaging_tutorial/tests/: test_example.py
playwright-demo/: test.py
playwright-demo/playwright_demo/: main.py
poetry-demo/: pyproject.toml
