[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = "Poetry Demo Project"
authors = ["pdob <75912982+pdob-git@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
